--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   intl: ^0.20.2
   google_fonts: ^6.2.1
   transparent_image: ^2.0.1
-  flutter_riverpod: ^2.6.1
   lottie: ^3.3.1
   flutter_native_splash: ^2.4.6
+  firebase_auth: ^5.7.0
+  firebase_core: ^3.15.2
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/animations/finance.json
+     - assets/animations/forgot_password.json
+     - assets/animations/login.json
      - assets/expense.png
      - assets/sp_background.png
   #   - images/a_dot_ham.jpeg
