--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   firebase_database: ^11.3.10
   http: ^1.4.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
