--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_database: ^11.3.10
   http: ^1.4.0
   fl_chart: ^1.0.0
+  flutter_local_notifications: ^19.4.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
@@ -78,9 +80,9 @@ flutter:
      - assets/animations/login.json
      - assets/animations/loading.json
      - assets/animations/add_expenses.json
-
      - assets/expense.png
-     - assets/sp_background.png
+
+
   #   - images/a_dot_ham.jpeg
 
 
